--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./images/transportation/Transit.jpg" alt="modern transit">
-
+      <h3>Travel</h3>
+      
     </div>
   </div>
 </body>
